added search course functionality!

--- a/Node.JS and ExpressJS 2019/11. ExpressJs - 19 Apr 2019 Exam/views/partials/user.hbs
+++ b/Node.JS and ExpressJS 2019/11. ExpressJs - 19 Apr 2019 Exam/views/partials/user.hbs
@@ -1,8 +1,8 @@
 <h1 class="text-center">Courses</h1>
 
-<form class="search">
+<form class="search" action="/course/course-search" method="POST">
     <label>Search: </label>
-    <input type="text">
+    <input type="text" name="title">
     <input type="submit" value="Search">
 </form>
 
